--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ 8, 11.0.x ]
+        java: [ 11, 21 ]
     name: Java ${{ matrix.java }}
     steps:
     - uses: actions/checkout@v2
